config/operator/base/network-policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: kyma-system
  name: kyma-project.io--serverless-operator-allow-to-apiserver
  labels:
    control-plane: operator
    purpose: allow-to-apiserver
    app.kubernetes.io/component: serverless-operator.kyma-project.io
    app.kubernetes.io/instance: serverless-operator-allow-to-apiserver-policy
spec:
  podSelector:
    matchLabels:
      control-plane: operator
      app.kubernetes.io/component: serverless-operator.kyma-project.io
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: kyma-system
  name: kyma-project.io--serverless-operator-allow-to-dns
  labels:
    control-plane: operator
    purpose: allow-to-dns
    app.kubernetes.io/component: serverless-operator.kyma-project.io
    app.kubernetes.io/instance: serverless-operator-allow-to-dns-policy
spec:
  podSelector:
    matchLabels:
      control-plane: operator
      app.kubernetes.io/component: serverless-operator.kyma-project.io
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
  - ports:
    - port: 8053
      protocol: UDP
    - port: 8053
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          gardener.cloud/purpose: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          gardener.cloud/purpose: kube-system
      podSelector:
        matchLabels:
          k8s-app: node-local-dns
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: kyma-system
  name: kyma-project.io--serverless-operator-allow-for-metrics
  labels:
    control-plane: operator
    purpose: allow-for-metrics
    app.kubernetes.io/component: serverless-operator.kyma-project.io
    app.kubernetes.io/instance: serverless-operator-allow-for-metrics-policy
spec:
  podSelector:
    matchLabels:
      control-plane: operator
      app.kubernetes.io/component: serverless-operator.kyma-project.io
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kyma-system
      podSelector:
        matchLabels:
          networking.kyma-project.io/metrics-scraping: allowed
    ports:
    - protocol: TCP
      port: 8080
